src/main/default/objects/CustomFieldInfo__c/CustomFieldInfo__c.object-meta.xml
<CustomObject>
    <label>CustomFieldInfo</label>
    <nameField>
        <displayFormat>CF-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CustomFieldInfo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>