src/main/default/objects/CustomFieldInfo__c/fields/CustomObject__c.field-meta.xml
<CustomField>
    <fullName>CustomObject__c</fullName>
    <formula>CustomObjectInfo__r.DeveloperName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CustomObject</label>
    <type>Text</type>
</CustomField>