src/main/default/objects/CustomFieldInfo__c/fields/CustomObjectInfo__c.field-meta.xml
<CustomField>
    <fullName>CustomObjectInfo__c</fullName>
    <label>CustomObjectInfo</label>
    <referenceTo>CustomObjectInfo__c</referenceTo>
    <relationshipLabel>CustomFieldInfo</relationshipLabel>
    <relationshipName>CustomFieldInfo</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>