src/main/default/objects/CustomFieldInfo__c/fields/DeveloperName__c.field-meta.xml
<CustomField>
    <fullName>DeveloperName__c</fullName>
    <label>DeveloperName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>