src/main/default/objects/CustomFieldInfo__c/fields/FieldDefinitionId__c.field-meta.xml
<CustomField>
    <fullName>FieldDefinitionId__c</fullName>
    <externalId>true</externalId>
    <label>FieldDefinitionId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>