src/main/default/objects/CustomFieldInfo__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>CustomField.FullName</inlineHelpText>
    <label>FullName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>