src/main/default/objects/CustomFieldInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CustomObject__c</columns>
    <columns>DeveloperName__c</columns>
    <columns>FieldDefinitionId__c</columns>
    <columns>FullName__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>